# asselect2

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  Trunk.toml  bulma.sass  custom.scss  deploy.env  deploy.toml  gunicorn.conf.py  index.html  package-lock.json  package.json  requirements.txt  test.env  test.toml  wrangler.jsonc  wsgi.py
asselect/: asselect.py  blueprint.py  openair.py
asselect/blueprints/: index.py
asselect/static/: bulma.css  bulma.min.css  robots.txt
asselect/templates/: about.html  asselect.html  extra.html  main.html  notam.html  option.html
bulma/: bulma.sass
deploy/: asselect.uk  asselect_gunicorn.service  test.asselect.uk
src/: components.rs  convert.rs  features.rs  main.rs  main_view.rs  openair.rs  settings.rs
src/components/: about_tab.rs  airspace_tab.rs  extra_panel.rs  extra_tab.rs  loa_panel.rs  notam_tab.rs  option_tab.rs  rat_panel.rs  select_field.rs  tabs.rs  wave_panel.rs
